--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "basic-express-app",
   "version": "0.0.1",
   "private": true,
-  "dependencies": {
+ "start": "node app.js",  
+"dependencies": {
     "express": "^4.13.3",
     "jade": "^1.11.0"
   }
